# javis

./: .env.example  .gitignore  118d32b  README.md  instruction.md  javis_ai_framework_analysis.md  pyproject.toml  run_api.py  ubuntu_jarvis_ai_framework_design.md
.cursor/rules/: project-rules.mdc
config/agent_cards/: coding_agent_card.json  qa_agent_card.json
markdown/: PLAN.md  TODO.md  additional.md  testcase-guide.md  testcase.md
src/: javis.py
src/jarvis/: __init__.py
src/jarvis/agents/: __init__.py  coding_agent.py  qa_agent.py
src/jarvis/components/: __init__.py  input_parser.py  response_generator.py
src/jarvis/core/: context_manager.py  dispatcher.py
src/jarvis/interfaces/a2a_adapter/: __init__.py  adk_agent_a2a_server.py
src/jarvis/interfaces/agent_hub/: server.py
src/jarvis/interfaces/api/: __init__.py  main.py
src/jarvis/libs/a2a/: __init__.py
src/jarvis/libs/a2a/server/: server.py  task_manager.py  utils.py
src/jarvis/models/: input.py
src/jarvis/tools/: __init__.py  code_execution_tool.py  translate_tool.py  web_search_tool.py
src/javis/scripts/: __init__.py  run_api.py
tests/: test_custom_web_ui.py  test_dispatcher.py  test_input_model.py  test_input_parser.py  test_project_setup.py  test_user_interface.py
tests/agents/: test_coding_agent.py  test_qa_agent.py
tests/components/: test_response_generator.py
tests/config/: test_agent_cards.py
tests/core/: test_context_manager.py  test_dispatcher.py  test_dispatcher_context_saving.py  test_dispatcher_response_integration.py
tests/interfaces/a2a_adapter/: test_adk_agent_a2a_server.py
tests/interfaces/agent_hub/: test_server.py
tests/tools/: test_code_execution_tool.py  test_tool_injection.py  test_translate_tool.py  test_web_search_tool.py
