[project]
name = "javis"
version = "0.1.0"
description = "Jarvis AI Framework - A modular AI assistant framework with multi-language support"
authors = [
    {name = "JHM",email = "jhm@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115)",
    "pydantic (>=2.11)",
    "uvicorn (>=0.34)",
    "langdetect (>=1.0.9)",
    "pytest (>=8.3)",
    "httpx (>=0.28)",
    "googletrans-py (>=4.0.0rc1)",
    "google-adk (>=0.1.0,<0.2.0)",
    "google-cloud-aiplatform (>=1.89.0,<2.0.0)",
    "python-dotenv (>=1.1)",
    "google-genai (>=1.0)",
    "duckduckgo-search (>=8.0.1,<9.0.0)"
]

[project.scripts]
run-api = "javis.scripts.run_api:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
testpaths = [
    "tests",
]

[tool.poetry.group.dev.dependencies]
pytest-mock = ">=3.14"

